// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Malison of Lauds > each Voice is silenced by a 0.6 s brand hold (COOL "Silenced"); released, silence decays at 0.35/s 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.83 -- partial silence: status=running vitals=98.3 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison] held=0.29 after=0.12
2.90 cue burn
3.05 cue burn
3.12 cue burn
3.13 cue burn
3.30 rate COOL "Silenced" +105 combo=1
3.30 flag brand-flesh
3.30 say "Careful! The brand is searing healthy flesh!"
3.30 say "instruction"
"
`;

exports[`Malison of Lauds > full fight: silence the choir, wound it to half ("Wounded" → submerges), hunt it with the Lens, unmake it into three hexstone shards 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.38 cue burn
2.53 cue burn
2.60 cue burn
2.60 rate COOL "Silenced" +105 combo=1
2.60 flag brand-flesh
2.60 say "Careful! The brand is searing healthy flesh!"
2.60 say "instruction"
2.63 cue burn
2.82 cue burn
2.92 cue burn
3.03 cue burn
3.22 cue burn
3.22 rate COOL "Silenced" +110 combo=2
3.48 cue burn
3.50 cue burn
3.57 cue burn
3.83 rate COOL "Silenced" +115 combo=3
4.22 cue burn
4.25 cue burn
4.27 cue burn
4.32 cue burn
4.45 rate COOL "Silenced" +120 combo=4
4.47 say "The choir is silenced — its heart is bare! Brand it, now!"
4.48 -- choir silenced: status=running vitals=96.9 score=450 combo=4 counts=4/0/0/0 live=[LaudsMalison] voices=0
4.62 cue burn
5.22 cue burn
5.32 cue burn
5.48 rate GOOD "Wounded" +75 combo=5
5.48 say "It’s gone under the skin! The Scrying Lens — hunt it down!"
5.52 -- wounded: status=running vitals=96.4 score=525 combo=5 counts=4/1/0/0 live=[LaudsMalison] hp=49.17 submerged=true
7.28 spawn Rot r=26 @(790,408)
7.28 flag first-rot
7.28 say "Rot must be salved almost entirely — any island left creeps back."
7.28 say "instruction"
8.02 popup "Found it!"
8.02 say "There! It’s surfacing — finish it!"
8.03 -- found: status=running vitals=94.2 score=525 combo=5 counts=4/1/0/0 live=[LaudsMalison,Rot] submerged=false
8.60 cue burn
8.72 cue burn
8.77 cue burn
8.78 cue burn
9.02 rate COOL "Malison unmade" +130 combo=6
9.02 spawn MalisonAsh r=29.9 optional @(764,466)
9.02 say "It shattered — hexstone, everywhere! Get every shard out before it spoils him!"
9.02 spawn Embedded kind=hexstone @(828,487)
9.02 flag first-hexstone
9.02 say "Hexstone: brand it still, then into the lead dish — never the tray."
9.02 say "instruction"
9.02 spawn Embedded kind=hexstone @(708,499)
9.02 spawn Embedded kind=hexstone @(755,411)
9.05 -- unmade: status=running vitals=93.3 score=655 combo=6 counts=5/1/0/0 live=[Rot,MalisonAsh,Embedded,Embedded,Embedded]
"
`;

exports[`Malison of Lauds > left exposed for more than 5 s, it calls two Voices back 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.38 cue burn
2.53 cue burn
2.60 cue burn
2.60 rate COOL "Silenced" +105 combo=1
2.60 flag brand-flesh
2.60 say "Careful! The brand is searing healthy flesh!"
2.60 say "instruction"
2.63 cue burn
2.82 cue burn
2.92 cue burn
3.03 cue burn
3.22 cue burn
3.22 rate COOL "Silenced" +110 combo=2
3.48 cue burn
3.50 cue burn
3.57 cue burn
3.83 rate COOL "Silenced" +115 combo=3
4.22 cue burn
4.25 cue burn
4.27 cue burn
4.32 cue burn
4.45 rate COOL "Silenced" +120 combo=4
4.47 say "The choir is silenced — its heart is bare! Brand it, now!"
8.53 flag lauds-hymn
8.53 say "It’s singing — every verse tears him open! Stitch the cuts as they come!"
8.53 say "instruction"
8.53 cue sfx.lauds.hymn
9.20 spawn Laceration source=blade length=55.9 bleed=0.9 @(786,295)
9.20 hurt 2
9.20 popup "-2"
9.47 spawn ChoirVoice @(835,431)
9.47 spawn ChoirVoice @(651,397)
9.47 say "It’s calling its Voices back!"
9.47 -- rekindled: status=running vitals=92.2 score=450 combo=4 counts=4/0/0/0 live=[LaudsMalison,Laceration,ChoirVoice,ChoirVoice] voices=2
"
`;

exports[`Malison of Lauds > sings a Hymn every 6.5 s that opens a laceration and costs 2 vitals 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
8.53 flag lauds-hymn
8.53 say "It’s singing — every verse tears him open! Stitch the cuts as they come!"
8.53 say "instruction"
8.53 cue sfx.lauds.hymn
9.20 spawn Laceration source=blade length=55.6 bleed=0.9 @(680,313)
9.20 hurt 2
9.20 popup "-2"
13.20 spawn BloodPool ichor=blood r=8 optional @(677,311)
15.05 cue sfx.lauds.hymn
15.72 spawn Laceration source=blade length=69.3 bleed=0.9 @(552,505)
15.72 hurt 2
15.72 popup "-2"
16.02 -- two hymns: status=running vitals=78.3 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison,Laceration,BloodPool,Laceration]
"
`;

exports[`Malison of Lauds > spawns four Voices; branding the core while they live says lauds-shielded and does no damage 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.02 flag lauds-shielded
2.02 say "The Voices shield it. Silence them first — hold the brand on each as it circles."
2.02 say "instruction"
3.03 -- branded the shielded core: status=running vitals=98.1 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison] hp=100
"
`;
